--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -4,6 +4,7 @@ FROM dl_base
 RUN pip --no-cache-dir install \
         https://download.pytorch.org/whl/cu100/torch-1.0.1.post2-cp36-cp36m-linux_x86_64.whl \
         torchvision \ 
+        pyro-ppl \
         tensorflow-gpu==2.0.0-alpha0 \
         keras
 
